{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 17,
  "lineage": "9bbe6180-fd85-d464-3b14-7604996b6af3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "seolhee-aws_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c84226050484bc2",
            "domain": "vpc",
            "id": "eipalloc-02c84226050484bc2",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-164-144-23.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.144.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "seolhee-Ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0454bb2fefc7de534",
            "arn": "arn:aws:ec2:ap-northeast-2:495740757494:instance/i-072ab35c9e7feda90",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072ab35c9e7feda90",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-077df9ff768ea6134",
            "private_dns": "ip-172-31-41-15.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.41.15",
            "public_dns": "ec2-13-125-234-172.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.234.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a7412688504704cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07344a922938d7ed9",
            "tags": {
              "Name": "Created By seolheeTf"
            },
            "tags_all": {
              "Name": "Created By seolheeTf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c6594cf71fa0ffea"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "seolhee-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495740757494:internet-gateway/igw-0715a8c5e57074811",
            "id": "igw-0715a8c5e57074811",
            "owner_id": "495740757494",
            "tags": {
              "Name": "seolhee-igw"
            },
            "tags_all": {
              "Name": "seolhee-igw"
            },
            "vpc_id": "vpc-05717edbc8a553099"
          },
          "dependencies": [
            "aws_vpc.seolhee-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "seolhee-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c84226050484bc2",
            "association_id": "eipassoc-0dc4b92f41ec09b95",
            "connectivity_type": "public",
            "id": "nat-0800a4a6851f72de7",
            "network_interface_id": "eni-0f8dbbca5791b3e59",
            "private_ip": "10.0.1.240",
            "public_ip": "15.164.144.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0df68cb510eb615a4",
            "tags": {
              "Name": "seolhee-nat"
            },
            "tags_all": {
              "Name": "seolhee-nat"
            }
          },
          "dependencies": [
            "aws_eip.seolhee-aws_eip",
            "aws_subnet.seolhee-public-subnet-2a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "seolhee-igw-as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0715a8c5e57074811",
            "id": "r-rtb-013df0f2f8f5c63581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013df0f2f8f5c6358",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.seolhee-igw",
            "aws_route_table.seolhee-public-rtb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "seolhee-nat-as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ff3a5b961c3301a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0800a4a6851f72de7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ff3a5b961c3301a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.seolhee-aws_eip",
            "aws_nat_gateway.seolhee-nat",
            "aws_route_table.seolhee-private-rtb",
            "aws_subnet.seolhee-public-subnet-2a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "seolhee-private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495740757494:route-table/rtb-0ff3a5b961c3301a1",
            "id": "rtb-0ff3a5b961c3301a1",
            "owner_id": "495740757494",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "seolhee-private-rtb"
            },
            "tags_all": {
              "Name": "seolhee-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-05717edbc8a553099"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.seolhee-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "seolhee-public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495740757494:route-table/rtb-013df0f2f8f5c6358",
            "id": "rtb-013df0f2f8f5c6358",
            "owner_id": "495740757494",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "seolhee-public-rtb"
            },
            "tags_all": {
              "Name": "seolhee-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-05717edbc8a553099"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.seolhee-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "seolhee-private-rtb-as-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7d0b0193194bb35",
            "route_table_id": "rtb-0ff3a5b961c3301a1",
            "subnet_id": "subnet-0d792f572105001aa"
          },
          "dependencies": [
            "aws_route_table.seolhee-private-rtb",
            "aws_subnet.seolhee-private-subnet-2a",
            "aws_vpc.seolhee-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "seolhee-public-rtb-as-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d59755c27e4a41f8",
            "route_table_id": "rtb-013df0f2f8f5c6358",
            "subnet_id": "subnet-0df68cb510eb615a4"
          },
          "dependencies": [
            "aws_route_table.seolhee-public-rtb",
            "aws_subnet.seolhee-public-subnet-2a",
            "aws_vpc.seolhee-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "seolhee-private-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495740757494:subnet/subnet-0d792f572105001aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d792f572105001aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495740757494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seolhee-private-subnet-2a"
            },
            "tags_all": {
              "Name": "seolhee-private-subnet-2a"
            },
            "vpc_id": "vpc-05717edbc8a553099"
          },
          "dependencies": [
            "aws_vpc.seolhee-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "seolhee-public-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495740757494:subnet/subnet-0df68cb510eb615a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df68cb510eb615a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495740757494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seolhee-public-subunet-2a"
            },
            "tags_all": {
              "Name": "seolhee-public-subunet-2a"
            },
            "vpc_id": "vpc-05717edbc8a553099"
          },
          "dependencies": [
            "aws_vpc.seolhee-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "seolhee-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495740757494:vpc/vpc-05717edbc8a553099",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-011248ffc8401e69c",
            "default_route_table_id": "rtb-05efa5c125ba35c55",
            "default_security_group_id": "sg-0cc0c7d08085d3550",
            "dhcp_options_id": "dopt-00555d530b7026f62",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05717edbc8a553099",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05efa5c125ba35c55",
            "owner_id": "495740757494",
            "tags": {
              "Name": "seolhee-vpc"
            },
            "tags_all": {
              "Name": "seolhee-vpc"
            }
          }
        }
      ]
    }
  ]
}